iptablesv5
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:VIETNAM-INPUT - [0:0]
:NOT-VIETNAM-INPUT - [0:0]
-A INPUT -i lo -j ACCEPT
-A INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT
-A VIETNAM-INPUT -p icmp --icmp-type any -j ACCEPT
-A VIETNAM-INPUT -p tcp --dport 22 -j ACCEPT
-A VIETNAM-INPUT -j REJECT --reject-with icmp-host-prohibited
-A INPUT -j NOT-VIETNAM-INPUT
-A FORWARD -j NOT-VIETNAM-INPUT
-A NOT-VIETNAM-INPUT -j DROP
COMMIT
